core/sass/pages/invest/_hpo-detail-page.scss
// HPO detail page
// ================

.hpo-detail-page {

  .hpo-page-section:nth-child(odd) {
    background-color: $white;
  }

  .hpo-page-section:nth-child(even) {
    background: $stone-30;
  }

  .contact-section {
    position: relative;
    width: 100%;
    top: 10px;
    z-index: 1;
  }

  .opportunity-list-image {
    max-width: 470px;
    margin-left: auto;
    margin-right: auto;
    display: block;
  }

  .proposition-two-image {
    margin-left: auto;
    margin-right: auto;
    display: block;
  }

  .proposition-one-media-container {
    height: 0;
  }

  .proposition-list-item {
    border-top: 4px solid $flag-red;
  }

  .proposition-two-grid {
    flex-direction: row;
  }

  @media(max-width: 640px) {
    .proposition-two-grid {
      flex-direction: column-reverse;
    }
  }

  .testimonial-section {

    .quote-outer-container {
      min-height: 600px;
      display: table;
    }

    .quote-inner-container {
      display: table-cell;
      vertical-align: middle;
    }

    @media(min-width: 640px) {
      .quote-container {
        width: 50%;
        margin: 0 auto;
      }
    }
  }

  @media(max-width: 640px) {
    .testimonial-section {

      .quote-outer-container {
        min-height: 400px;
        padding: 0 $spacing-3;
      }
    }
  }

  .competitive-advantages {
    .icon-container {
      float: left;
      margin-right: $spacing-3;
    }

    .advantages-container {
      float: left;
    }

    .advantages-item {
      display: flex;
      flex-direction: row;
      margin-bottom: $spacing-4;
    }
  }

  .company-list {

    .company-logo-list img {
      width: 150px;
    }

    @media (max-width: 640px) {
      .company-logo-list {
        li {
          width: 50%;
          float: left;
        }
      }
    }
  }

  .case-studies {
    .hpo-case-study {
      border-bottom: 1px solid $light-grey;
    }

    .hpo-case-study:last-child {
      border: 0;
    }
  }

}

